--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,9 @@
 name: Cloud Deployment Demo
 
 on:
-  push:
-    branches: ["main"]
+  workflow_dispatch: #
+#  push:
+#    branches: ["main"]
 #  pull_request:
 #    branches: ["main"]
 
